--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>LE2I Doctoral Day 2019</title>
-
+    <title>ImViA Doctoral Day 2019</title>
+    <link rel="shortcut icon" href="./img/download.ico" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
@@ -38,7 +38,7 @@
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
         <li class="sidebar-brand">
-          <a href="#top"  onclick = $("#menu-close").click(); >LE2I DD 2019</a>
+          <a href="#top"  onclick = $("#menu-close").click(); >ImViA DD 2019</a>
         </li>
         <li>
           <a href="#top" onclick = $("#menu-close").click(); >Home</a>
@@ -72,7 +72,7 @@
       <div class="text-vertical">
         <h1 class="blue-leii"><img src="./img/title.png" height="80"></h1>
         <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>-->
-	<h2 class="black-leii"><strong>March 7<sup>th</sup>, 2019</strong></h2>
+	<h2 class="black-leii"><strong>March 14<sup>th</sup>, 2019</strong></h2>
 	<h2 class="black-leii"><strong>Le Creusot</strong></h2>
         <a href="#about" class="btn btn-circle-up page-scroll">
           <i class="fa fa-angle-double-down animated"></i>
@@ -85,8 +85,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2>What is the LE2I Doctoral Day!</h2>
-            <p class="lead">The LE2I Doctoral Day 2019 will offer a unique experience to BSc, MSc and PhD candidates to present and share there experience.</p>
+            <h2>What is the ImViA Doctoral Day!</h2>
+            <p class="lead">The ImViA Doctoral Day 2019 will offer a unique experience to BSc, MSc and PhD candidates to present and share there experience.</p>
 	    <p class="lead">The symposium follows the 3C rule:</p>
 	    <p class="lead"><b>C</b>ommunity, <b>C</b>ollaboration, <b>C</b>ontinuity</p>
           </div>
