--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 	      <div class="row">
 		<div class="col-xs-2"><img class="center" src="./img/cnrs-logo.png" align="middle" height="35px"></div>
 		<div class="col-xs-2"><img class="center" src="./img/condorcet.png" align="left" height="30px"></div>
-		<div class="col-xs-2"><img class="center" src="./img/le2i-logo.png" align="middle" height="35px"></div>
+		<div class="col-xs-2"><img class="center" src="./img/download.png" align="middle" height="35px"></div>
 		<div class="col-xs-2"><img class="center" src="./img/ubfc.png" align="middle" height="35px"></div>
 		<div class="col-xs-2"><img class="center" src="./img/spim.png" align="middle" height="40px"></div>
 	      </div>
