--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	    <hr class="small">
 	    <div class="row">
               <div class="col-lg-6 col-lg-offset-3 text-left">
-                <p style="font-size: 125%;"><strong>Important ! Every Ph.D student at Le2i must submit a paper at least once during his thesis (in 2<sup>nd</sup> or 3<sup>rd</sup> year).</strong></p>
+                <p style="font-size: 125%;"><strong>Important ! Every Ph.D student at ImVia must submit a paper at least once during his thesis (in 2<sup>nd</sup> or 3<sup>rd</sup> year).</strong></p>
 		<p style="font-size: 125%;">Papers in <strong>PDF</strong> format must be submitted by mail <a href="mailto:fr.marc.blanchon@gmail.com">here</a>.</p>
 	      </div>
 	    </div>
@@ -423,7 +423,7 @@
     		    <h3 class="panel-title text-center">Abir Zanzouri</h3>
     		  </div>
     		  <div class="panel-body">
-    		    <div class="image-center"> <img src="./img/le2i-logo.png" height="32"> </div>
+    		    <div class="image-center"> <img src="./img/download.png" height="32"> </div>
     		    <address class="text-center">
     		      <strong>Laboratoire ImViA - ERL VIBOT</strong><br>
     		      12 rue de la Fonderie<br>
@@ -439,7 +439,7 @@
     		    <h3 class="panel-title text-center">David Strubel</h3>
     		  </div>
     		  <div class="panel-body">
-    		    <div class="image-center"> <img src="./img/le2i-logo.png" height="32"> </div>
+    		    <div class="image-center"> <img src="./img/download.png" height="32"> </div>
     		    <address class="text-center">
     		      <strong>Laboratoire ImViA - ERL VIBOT</strong><br>
     		      12 rue de la Fonderie<br>
@@ -461,7 +461,7 @@
     		    <h3 class="panel-title text-center">Yifei Zhang</h3>
     		  </div>
     		  <div class="panel-body">
-    		    <div class="image-center"> <img src="./img/le2i-logo.png" height="32"> </div>
+    		    <div class="image-center"> <img src="./img/download.png" height="32"> </div>
     		    <address class="text-center">
     		      <strong>Laboratoire ImViA - ERL VIBOT</strong><br>
     		      12 rue de la Fonderie<br>
@@ -478,7 +478,7 @@
     		    <h3 class="panel-title text-center">Thomas Herrmann</h3>
     		  </div>
     		  <div class="panel-body">
-    		    <div class="image-center"> <img src="./img/le2i-logo.png" height="32"> </div>
+    		    <div class="image-center"> <img src="./img/download.png" height="32"> </div>
     		    <address class="text-center">
     		      <strong>Laboratoire ImViA - ERL VIBOT</strong><br>
     		      12 rue de la Fonderie<br>
@@ -495,7 +495,7 @@
     		    <h3 class="panel-title text-center">Thibault Clamens</h3>
     		  </div>
     		  <div class="panel-body">
-    		    <div class="image-center"> <img src="./img/le2i-logo.png" height="32"> </div>
+    		    <div class="image-center"> <img src="./img/download.png" height="32"> </div>
     		    <address class="text-center">
                     <strong>Laboratoire ImViA - ERL VIBOT</strong><br>
       		      12 rue de la Fonderie<br>
@@ -543,7 +543,7 @@
 	<div class="row">
       	  <div class="col-lg-12 text-center">
       	    <hr class="small">
-      	    <p class="text-muted">Copyright &copy; Le2i</p>
+      	    <p class="text-muted">Copyright &copy; ImViA</p>
       	    <p class="text-muted">Webmaster - 2015 <a href="mailto:guillaume.lemaitre@udg.edu">Guillaume Lemaitre</a> - 2016 <a href="mailto:axel.moinet@u-bourgogne.fr">Axel Moinet</a> - 2018 <a href="mailto:fr.marc.blanchon@gmail.com">Marc Blanchon</a></p>
       	  </div>
 	</div>
