--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>ImViA Doctoral Day 2019</title>
-    <link rel="shortcut icon" href="./img/download.ico" />
+    <link rel="icon" href="../img/download.ICO" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
