--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                   <h4>
                     <strong class="orange-ub">Key Dates</strong>
                   </h4>
-		  <p><strong>Feb. 1<sup>st</sup>, 2019: <a href="mailto:fr.marc.blanchon@gmail.com">Online Registration by mail</a></strong></p>
-		  <p><strong>Feb. 11<sup>th</sup>, 2019:</strong> Paper submission</p>
-                  <p><strong>Mar. 7<sup>th</sup>, 2016:</strong> Symposium date</p>
+		  <p><strong>Feb. 11<sup>st</sup>, 2019: <a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">Paper submission and Online Registration by mail</a></strong></p>
+		  <p><strong>Feb. 25<sup>th</sup>, 2019:</strong> Review deadlines</p>
+                  <p><strong>Mar. 14<sup>th</sup>, 2016:</strong> Symposium date</p>
                   <a href="#schedule" class="btn btn-light">Learn More</a>
                 </div>
               </div>
@@ -130,7 +130,7 @@
                   </h4>
                   <p><strong>Length:</strong> From 2 to 6 pages</p>
 		  <p><strong>Template:</strong> 2-columns, IEEE conf.</p>
-                  <p><strong><a href="mailto:fr.marc.blanchon@gmail.com">Online Submission by mail</a></strong></p>
+                  <p><strong><a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">Online Submission</a></strong></p>
 		  <br>
                   <a href="#template" class="btn btn-light">Learn More</a>
                 </div>
@@ -188,7 +188,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2>Doctoral Day 2019</h2>
-            <p class="lead">March 7<sup>th</sup>, 2019 at Le Creusot<br/>
+            <p class="lead">March 14<sup>th</sup>, 2019 at Le Creusot<br/>
                 </p>
           </div>
         </div>
@@ -338,7 +338,7 @@
 	    <div class="row">
               <div class="col-lg-6 col-lg-offset-3 text-left">
                 <p style="font-size: 125%;"><strong>Important ! Every Ph.D student at ImVia must submit a paper at least once during his thesis (in 2<sup>nd</sup> or 3<sup>rd</sup> year).</strong></p>
-		<p style="font-size: 125%;">Papers in <strong>PDF</strong> format must be submitted by mail <a href="mailto:fr.marc.blanchon@gmail.com">here</a>.</p>
+		<p style="font-size: 125%;">Papers in <strong>PDF</strong> format must be submitted <a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">here</a>.</p>
 	      </div>
 	    </div>
 	    <br>
@@ -357,8 +357,8 @@
 	    <hr class="small">
             <div class="row">
               <div class="col-lg-6 col-lg-offset-3 text-left">
-		<p style="font-size: 125%;">Registration deadline is the <strong>1<sup>st</sup> February 2019</strong>.</p>
-		<p style="font-size: 125%;">Participants need to register by mail <a href="mailto:fr.marc.blanchon@gmail.com">here</a> before this date.</p>
+		<p style="font-size: 125%;">Registration deadline is the <strong>11<sup>th</sup> February 2019</strong>.</p>
+		<p style="font-size: 125%;">Participants need to register<a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">here</a> before this date.</p>
 		<!--<p><strong>REGISTRATION CLOSE!!!!</strong></p>-->
 	      </div>
 	    </div>
