--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <h4>
                     <strong class="orange-ub">Key Dates</strong>
                   </h4>
-		  <p><strong>Feb. 11<sup>st</sup>, 2019: <a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">Paper submission and Online Registration by mail</a></strong></p>
+		  <p><strong>Feb. 11<sup>st</sup>, 2019: <a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">Paper submission and Online Registration</a></strong></p>
 		  <p><strong>Feb. 25<sup>th</sup>, 2019:</strong> Review deadlines</p>
                   <p><strong>Mar. 14<sup>th</sup>, 2016:</strong> Symposium date</p>
                   <a href="#schedule" class="btn btn-light">Learn More</a>
@@ -358,7 +358,7 @@
             <div class="row">
               <div class="col-lg-6 col-lg-offset-3 text-left">
 		<p style="font-size: 125%;">Registration deadline is the <strong>11<sup>th</sup> February 2019</strong>.</p>
-		<p style="font-size: 125%;">Participants need to register<a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">here</a> before this date.</p>
+		<p style="font-size: 125%;">Participants need to register <a href="https://docs.google.com/forms/d/1D-Pvd0Ad5VtmUtKi6stcXn3NenKK0aEeO98eEnXFpxY/edit">here</a> before this date.</p>
 		<!--<p><strong>REGISTRATION CLOSE!!!!</strong></p>-->
 	      </div>
 	    </div>
