--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Header -->
     <header id="top" class="header">
       <div class="text-vertical">
-        <h1 class="blue-leii"><img src="./img/title.png" height="80"></h1>
+        <h1 class="blue-leii"><img src="./img/titlefinal1.png" height="280"></h1>
         <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>-->
 	<h2 class="black-leii"><strong>March 14<sup>th</sup>, 2019</strong></h2>
 	<h2 class="black-leii"><strong>Le Creusot</strong></h2>
