--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="text-vertical">
         <h1 class="blue-leii"><img src="./img/titlefinal1.png" height="280"></h1>
         <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>-->
-	<h2 class="black-leii" style="color:white;"><strong>March 14<sup>th</sup>, 2019</strong></h2>
-	<h2 class="black-leii" style="color:white;"><strong>Le Creusot</strong></h2>
+	<h2 class="black-leii" style="color:#FF6F2D;"><strong>March 14<sup>th</sup>, 2019</strong></h2>
+	<h2 class="black-leii" style="color:#FF6F2D;"><strong>Le Creusot</strong></h2>
         <a href="#about" class="btn btn-circle-up page-scroll">
           <i class="fa fa-angle-double-down animated"></i>
         </a>
